2022-08-28  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rstdoc.el: rewritten completely.

2022-08-27  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-load.el: added a (require 'eev-rstdoc).

2022-08-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-eepitch-intro): added the section "2.6.
	`find-vtermprocess'".

	* eepitch.el (eepitch-isympy): new function.

2022-08-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-video-links-intro): rewrote the section "5.1.
	Subtitles".

2022-08-14  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-rstdoc.el: new file.

2022-08-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-angg-not-configured)
	(find-es-not-configured): new functions.

2022-08-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eepitch.el (find-slyprocess, eepitch-sly): new functions.

2022-06-26  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-kla.el (ee-kla-demo-write-file)
	(ee-kla-demo-write-three-files, eekla2): new functions.

	* eev-intro.el (find-kla-test-intro): New function.

2022-06-25  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-copy-rest00): new function.
	(ee-copy-rest0): use `ee-copy-rest00'.

	* eev-hlinks.el (find-here-links, ee-find-here-links): added an
	"&optional arg" to the argument list, for debugging.
	(ee-find-here-debug-links): new function.
	(ee-detect-here): new function.

2022-06-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-buffer-local-variables): new function.
	(find-ebufferlocalvars): use `ee-buffer-local-variables'.

2022-06-08  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-audiovideo.el (ee-code-mpv-audio): Fixed a typo.

2022-06-05  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-git-dir): converted the setq to a defvar.

	* eev-mode.el (eev-mode-map-set): moved the `define-key' for
	`find-git-links' from eev-tlinks.el to here.

	* eev-blinks.el (ee-find-eejumps-header): added a pointer to
	`(find-elisp-intro)'.
