@@ -1,3 +1,12 @@
+2022-09-03  Eduardo Ochs  <eduardoochs@gmail.com>
+
+	* eev-hlinks.el (ee-eshortdoc-re): new variable.
+	(ee-eshortdoc-bufferp): new function.
+	(ee-find-eshortdoc-links): new function.
+	(ee-fhl-main-program): added an entry for shortdoc.
+
+	* eev-blinks.el (find-eshortdoc): new function.
+
 2022-08-28  Eduardo Ochs  <eduardoochs@gmail.com>
 
 	* eev-rstdoc.el: rewritten completely.
